Update README.md. Separate local and cloud profiles.

--- a/service/pom.xml
+++ b/service/pom.xml
@@ -3,13 +3,13 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.example</groupId>
-	<artifactId>guestbook</artifactId>
+	<groupId>com.project</groupId>
+	<artifactId>service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
 
-	<name>guestbook</name>
-	<description>Demo project for Spring Boot</description>
+	<name>service</name>
+	<description>Permanent make up backend</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
