--- a/frontend/pom.xml
+++ b/frontend/pom.xml
@@ -3,13 +3,13 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.example</groupId>
+	<groupId>com.project</groupId>
 	<artifactId>frontend</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
 
 	<name>frontend</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Permanent make up frontend</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
