--- a/frontend/src/main/resources/application.properties
+++ b/frontend/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 management.endpoints.web.exposure.include=*
 spring.cloud.gcp.trace.enabled=false
+
+server.port=8080
+eureka.client.serviceUrl.defaultZone=${EUREKA_URI:http://localhost:8761/eureka}
