--- a/backend-service/src/main/resources/application-cloud.properties
+++ b/backend-service/src/main/resources/application-cloud.properties
@@ -1,4 +1,5 @@
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.open-in-view=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL55Dialect
 spring.cloud.gcp.sql.enabled=true
 spring.cloud.gcp.sql.database-name=main
