Add gitignore. Expose endpoints for backend for showing information in admin. Create local profile for frontend service.

--- a/backend-service/src/main/resources/application-cloud.properties
+++ b/backend-service/src/main/resources/application-cloud.properties
@@ -16,3 +16,5 @@ spring.datasource.hikari.maximum-pool-size=5
 spring.cloud.gcp.trace.enabled=true
 spring.sleuth.sampler.probability=1
 spring.sleuth.web.skipPattern=(^cleanup.*|.+favicon.*)
+
+logging.file=/var/log/permanent-make-up-backend-service.log
