--- a/backend-service/src/main/resources/application.properties
+++ b/backend-service/src/main/resources/application.properties
@@ -1,2 +1,9 @@
+management.endpoints.web.exposure.include=*
 spring.cloud.gcp.sql.enabled=false
 spring.cloud.gcp.trace.enabled=false
+
+server.port=0
+eureka.client.serviceUrl.defaultZone=${EUREKA_URI:http://localhost:8761/eureka}
+eureka.instance.preferIpAddress=true
+
+logging.pattern.file=%clr(%d{yyyy-MM-dd HH:mm:ss.SSS}){faint} %clr(%5p) %clr(${PID}){magenta} %clr(---){faint} %clr([%15.15t]){faint} %clr(%-40.40logger{39}){cyan} %clr(:){faint} %m%n%wEx
