--- a/frontend-service/src/main/resources/application-cloud.properties
+++ b/frontend-service/src/main/resources/application-cloud.properties
@@ -1,3 +1,5 @@
 spring.cloud.gcp.trace.enabled=true
 spring.sleuth.sampler.probability=1
 spring.sleuth.web.skipPattern=(^cleanup.*|.+favicon.*)
+
+logging.file=/var/log/permanent-make-up-frontend-service.log
