--- a/frontend-service/src/main/resources/application.properties
+++ b/frontend-service/src/main/resources/application.properties
@@ -3,6 +3,6 @@ spring.cloud.gcp.trace.enabled=false
 
 server.port=8080
 eureka.client.serviceUrl.defaultZone=${EUREKA_URI:http://localhost:8761/eureka}
+eureka.instance.preferIpAddress=true
 
-logging.file=/var/log/permanent-make-up-frontend-service.log
 logging.pattern.file=%clr(%d{yyyy-MM-dd HH:mm:ss.SSS}){faint} %clr(%5p) %clr(${PID}){magenta} %clr(---){faint} %clr([%15.15t]){faint} %clr(%-40.40logger{39}){cyan} %clr(:){faint} %m%n%wEx
