Add jib support for containers creation

--- a/eureka-service/pom.xml
+++ b/eureka-service/pom.xml
@@ -50,6 +50,16 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<groupId>com.google.cloud.tools</groupId>
+				<artifactId>jib-maven-plugin</artifactId>
+				<version>0.9.8</version>
+				<configuration>
+					<to>
+						<image>gcr.io/permanent-make-up/eureka-service</image>
+					</to>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
