--- a/admin-service/pom.xml
+++ b/admin-service/pom.xml
@@ -82,6 +82,16 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
+            <plugin>
+                <groupId>com.google.cloud.tools</groupId>
+                <artifactId>jib-maven-plugin</artifactId>
+                <version>0.9.8</version>
+                <configuration>
+                    <to>
+                        <image>gcr.io/permanent-make-up/admin-service</image>
+                    </to>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
