--- a/backend-service/pom.xml
+++ b/backend-service/pom.xml
@@ -45,6 +45,10 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.flywaydb</groupId>
 			<artifactId>flyway-core</artifactId>
 		</dependency>
@@ -99,7 +103,6 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-tomcat</artifactId>
-			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -127,6 +130,16 @@
 				<version>1.3.1</version>
 				<configuration>
 					<version>1</version>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>com.google.cloud.tools</groupId>
+				<artifactId>jib-maven-plugin</artifactId>
+				<version>0.9.8</version>
+				<configuration>
+					<to>
+						<image>gcr.io/permanent-make-up/backend-service</image>
+					</to>
 				</configuration>
 			</plugin>
 		</plugins>
