--- a/frontend-service/pom.xml
+++ b/frontend-service/pom.xml
@@ -27,6 +27,10 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>de.codecentric</groupId>
 			<artifactId>spring-boot-admin-starter-client</artifactId>
 			<version>2.0.2</version>
@@ -89,7 +93,6 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-tomcat</artifactId>
-			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -147,6 +150,16 @@
 				<version>1.3.1</version>
 				<configuration>
 					<version>1</version>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>com.google.cloud.tools</groupId>
+				<artifactId>jib-maven-plugin</artifactId>
+				<version>0.9.8</version>
+				<configuration>
+					<to>
+						<image>gcr.io/permanent-make-up/frontend-service</image>
+					</to>
 				</configuration>
 			</plugin>
 		</plugins>
