--- a/kubernetes/backend-service-deployment.yaml
+++ b/kubernetes/backend-service-deployment.yaml
@@ -2,38 +2,38 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: guestbook-service
-  name: guestbook-service
+    app: backend-service
+  name: backend-service
 spec:
   ports:
   - name: http
     port: 8080
     targetPort: 8080
   selector:
-    app: guestbook-service
+    app: backend-service
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    app: guestbook-service
-  name: guestbook-service
+    app: backend-service
+  name: backend-service
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: guestbook-service
+      app: backend-service
   template:
     metadata:
       labels:
-        app: guestbook-service
+        app: backend-service
     spec:
       volumes:
       - name: credentials
         secret:
-          secretName: guestbook-service-account
+          secretName: backend-service-account
       containers:
-      - name: guestbook-service
+      - name: backend-service
         image: gcr.io/permanent-make-up/frontend-service
         volumeMounts:
         - name: credentials
