--- a/kubernetes/frontend-service-deployment.yaml
+++ b/kubernetes/frontend-service-deployment.yaml
@@ -2,8 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: guestbook-frontend
-  name: guestbook-frontend
+    app: frontend-service
+  name: frontend-service
 spec:
   type: LoadBalancer
   ports:
@@ -11,30 +11,30 @@ spec:
     port: 8080
     targetPort: 8080
   selector:
-    app: guestbook-frontend
+    app: frontend-service
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    app: guestbook-frontend
-  name: guestbook-frontend
+    app: frontend-service
+  name: frontend-service
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: guestbook-frontend
+      app: frontend-service
   template:
     metadata:
       labels:
-        app: guestbook-frontend
+        app: frontend-service
     spec:
       volumes:
       - name: credentials
         secret:
-          secretName: guestbook-service-account
+          secretName: permanent-make-up-service-account
       containers:
-      - name: guestbook-frontend
+      - name: frontend-service
         image: gcr.io/permanent-make-up/backend-service
         volumeMounts:
         - name: credentials
