--- a/frontend-service/src/main/resources/application.yml
+++ b/frontend-service/src/main/resources/application.yml
@@ -10,7 +10,7 @@ eureka:
   client:
     registryFetchIntervalSeconds: 5
     serviceUrl:
-      defaultZone: ${EUREKA_SERVICE_URL:http://localhost:8761}/eureka/
+      defaultZone: http://35.193.236.232:8761/eureka/
 
 server:
   port: 8080
