--- a/kubernetes/admin-service-deployment.yml
+++ b/kubernetes/admin-service-deployment.yml
@@ -1,30 +1,49 @@
 apiVersion: v1
-kind: Pod
-metadata:
-  name: admin
-  labels:
-    app: spring-boot-admin
-    component: admin
-spec:
-  containers:
-    - image: gcr.io/permanent-make-up/admin-service
-      name: spring-boot-admin
-      ports:
-        - containerPort: 8081
-      env:
-        - name: EUREKA_SERVICE_URL
-          value: "http://eureka:8761" #"eureka" host is resolved by K8s DNS matching the service name
-        - name: EUREKA_INSTANCE_PREFER_IP_ADDRESS
-          value: "true"
----
-apiVersion: v1
 kind: Service
 metadata:
-  name: admin
+  labels:
+    app: admin-service
+  name: admin-service
 spec:
-  ports:
-    - port: 8081
-  selector:
-    app: spring-boot-admin
-    component: admin
   type: LoadBalancer
+  ports:
+  - name: http
+    port: 8081
+    targetPort: 8081
+  selector:
+    app: admin-service
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  labels:
+    app: admin-service
+  name: admin-service
+spec:
+  selector:
+    matchLabels:
+      app: admin-service
+  template:
+    metadata:
+      labels:
+        app: admin-service
+    spec:
+      volumes:
+      - name: credentials
+        secret:
+          secretName: permanent-make-up-service-account
+      containers:
+      - name: admin-service
+        image: gcr.io/permanent-make-up/admin-service
+        volumeMounts:
+        - name: credentials
+          mountPath: "/etc/credentials"
+          readOnly: true
+        env:
+        - name: EUREKA_INSTANCE_PREFERIPADDRESS
+          value: "true"
+        - name: EUREKA_SERVICE_URL
+          value: "http://admin-service:8761"
+        ports:
+        - name: http
+          containerPort: 8081
