--- a/kubernetes/backend-service-deployment.yml
+++ b/kubernetes/backend-service-deployment.yml
@@ -2,57 +2,50 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: frontend-service
-  name: frontend-service
+    app: backend-service
+  name: backend-service
 spec:
-  type: LoadBalancer
   ports:
   - name: http
-    port: 8080
-    targetPort: 8080
+    port: 8082
+    targetPort: 8082
   selector:
-    app: frontend-service
+    app: backend-service
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    app: frontend-service
-  name: frontend-service
+    app: backend-service
+  name: backend-service
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: frontend-service
+      app: backend-service
   template:
     metadata:
       labels:
-        app: frontend-service
+        app: backend-service
     spec:
       volumes:
       - name: credentials
         secret:
           secretName: permanent-make-up-service-account
       containers:
-      - name: frontend-service
-        image: gcr.io/permanent-make-up/backend-service
+      - name: backend-service
+        image: gcr.io/permanent-make-up/frontend-service
         volumeMounts:
         - name: credentials
           mountPath: "/etc/credentials"
           readOnly: true
         env:
-        - name: SPRING_CLOUD_CONFIG_ENABLED
-          value: "false"
-        - name: SPRING_CLOUD_GCP_CONFIG_ENABLED
-          value: "false"
         - name: SPRING_PROFILES_ACTIVE
           value: cloud
         - name: GOOGLE_APPLICATION_CREDENTIALS
-          value: /etc/credentials/service-account.json
-        - name: EUREKA_SERVICE_URL
-          value: "http://eureka:8761" #"eureka" host is resolved by K8s DNS matching the service name
+          value: /etc/credentials/project-editor.json
         - name: EUREKA_INSTANCE_PREFER_IP_ADDRESS
           value: "true"
         ports:
         - name: http
-          containerPort: 8080
+          containerPort: 8082
