--- a/kubernetes/eureka-service-deployment.yml
+++ b/kubernetes/eureka-service-deployment.yml
@@ -1,28 +1,39 @@
 apiVersion: v1
-kind: Pod
-metadata:
-  name: eureka
-  labels:
-    app: spring-boot-admin
-    component: eureka
-spec:
-  containers:
-    - name: eureka
-      image: gcr.io/permanent-make-up/eureka-service
-      ports:
-        - containerPort: 8761
-      env:
-        - name: EUREKA_INSTANCE_PREFERIPADDRESS
-          value: "true"
----
-apiVersion: v1
 kind: Service
 metadata:
-  name: eureka
+  labels:
+    app: eureka-service
+  name: eureka-service
 spec:
-  ports:
-    - port: 8761
-  selector:
-    app: spring-boot-admin
-    component: eureka
   type: LoadBalancer
+  ports:
+  - name: http
+    port: 8761
+    targetPort: 8761
+  selector:
+    app: eureka-service
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  labels:
+    app: eureka-service
+  name: eureka-service
+spec:
+  selector:
+    matchLabels:
+      app: eureka-service
+  template:
+    metadata:
+      labels:
+        app: eureka-service
+    spec:
+      containers:
+      - name: eureka-service
+        image: springcloud/eureka
+        env:
+        - name: EUREKA_INSTANCE_PREFERIPADDRESS
+          value: "true"
+        ports:
+        - name: http
+          containerPort: 8761
