Deploy backend and frontend services to k8s. They appear in eureka service discovery UI.

--- a/backend-service/pom.xml
+++ b/backend-service/pom.xml
@@ -140,6 +140,11 @@
 					<to>
 						<image>gcr.io/permanent-make-up/backend-service</image>
 					</to>
+					<container>
+						<ports>
+							<port>8082</port>
+						</ports>
+					</container>
 				</configuration>
 			</plugin>
 		</plugins>
