--- a/admin-service/src/main/resources/application.yml
+++ b/admin-service/src/main/resources/application.yml
@@ -12,7 +12,7 @@ eureka:
   client:
     registryFetchIntervalSeconds: 5
     serviceUrl:
-      defaultZone: http://35.193.236.232:8761/eureka/
+      defaultZone: http://eureka-service:8761/eureka/
 
 management:
   endpoints:
