Remove security for backend and frontend. Add swagger for backend and frontend. Deployment update changes. Add a clean script

--- a/backend-service/pom.xml
+++ b/backend-service/pom.xml
@@ -8,7 +8,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
 
-	<name>service</name>
+	<name>backend-service</name>
 	<description>Permanent make up backend</description>
 
 	<parent>
@@ -45,8 +45,14 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-security</artifactId>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+			<version>2.9.2</version>
+		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger-ui</artifactId>
+			<version>2.9.2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.flywaydb</groupId>
